feat: learning rate variation comparison.

--- a/src/tests/test_activation.ipynb
+++ b/src/tests/test_activation.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,56 +24,21 @@
     "import os\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "import time\n",
+    "\n",
     "\n",
     "# Add parent directory to path\n",
     "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), \"../\")))\n",
     "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
     "from model import FFNN\n",
     "from activation import Linear, ReLU, Sigmoid, Tanh, Softmax, LeakyReLU, ELU\n",
     "from loss import CategoricalCrossEntropy\n",
-    "from utils import load_mnist_data\n",
+    "from utils import load_mnist_data, train_and_evaluate\n",
     "\n",
     "# Create out dir\n",
     "os.makedirs(\"../../out\", exist_ok=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def train_and_evaluate(model, X_train, X_test, y_train_onehot, y_test, y_test_onehot, \n",
-    "                      epochs=10, batch_size=32, learning_rate=0.01, model_name=\"Model\"):\n",
-    "    \"\"\"\n",
-    "    Train and evaluate a model, returning its history and accuracy\n",
-    "    \"\"\"\n",
-    "    print(f\"\\nTraining {model_name}...\")\n",
-    "    start_time = time.time()\n",
-    "    \n",
-    "    history = model.fit(\n",
-    "        X_train, \n",
-    "        y_train_onehot,\n",
-    "        batch_size=batch_size,\n",
-    "        learning_rate=learning_rate,\n",
-    "        epochs=epochs,\n",
-    "        validation_data=(X_test, y_test_onehot),\n",
-    "        verbose=1\n",
-    "    )\n",
-    "    \n",
-    "    training_time = time.time() - start_time\n",
-    "    print(f\"Training took {training_time:.2f} seconds\")\n",
-    "    \n",
-    "    # Make predictions and calculate accuracy\n",
-    "    y_pred = model.predict(X_test)\n",
-    "    y_pred_classes = np.argmax(y_pred, axis=1)\n",
-    "    accuracy = accuracy_score(y_test, y_pred_classes)\n",
-    "    \n",
-    "    print(f\"{model_name} accuracy: {accuracy:.4f}\")\n",
-    "    \n",
-    "    return history, accuracy, training_time, model"
    ]
   },
   {
