--- a/src/tests/test_depth_width.ipynb
+++ b/src/tests/test_depth_width.ipynb
@@ -17,75 +17,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
-    "import time\n",
     "\n",
-    "from sklearn.metrics import accuracy_score\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
     "\n",
     "# Add parent directory to path\n",
     "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), \"../\")))\n",
     "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
     "from activation import ReLU, Softmax\n",
     "from loss import CategoricalCrossEntropy\n",
     "from model import FFNN\n",
-    "from utils import load_mnist_data\n",
+    "from utils import load_mnist_data, train_and_evaluate\n",
     "\n",
     "# Create out dir\n",
     "os.makedirs(\"../../out\", exist_ok=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "def train_and_evaluate(\n",
-    "    model,\n",
-    "    X_train,\n",
-    "    X_test,\n",
-    "    y_train_onehot,\n",
-    "    y_test,\n",
-    "    y_test_onehot,\n",
-    "    epochs=10,\n",
-    "    batch_size=32,\n",
-    "    learning_rate=0.01,\n",
-    "    model_name=\"Model\",\n",
-    "):\n",
-    "    \"\"\"\n",
-    "    Train and evaluate a model, returning its history and accuracy\n",
-    "    \"\"\"\n",
-    "    print(f\"\\nTraining {model_name}...\")\n",
-    "    start_time = time.time()\n",
-    "\n",
-    "    history = model.fit(\n",
-    "        X_train,\n",
-    "        y_train_onehot,\n",
-    "        batch_size=batch_size,\n",
-    "        learning_rate=learning_rate,\n",
-    "        epochs=epochs,\n",
-    "        validation_data=(X_test, y_test_onehot),\n",
-    "        verbose=1,\n",
-    "    )\n",
-    "\n",
-    "    training_time = time.time() - start_time\n",
-    "    print(f\"Training took {training_time:.2f} seconds\")\n",
-    "\n",
-    "    y_pred = model.predict(X_test)\n",
-    "    y_pred_classes = np.argmax(y_pred, axis=1)\n",
-    "    accuracy = accuracy_score(y_test, y_pred_classes)\n",
-    "\n",
-    "    print(f\"{model_name} accuracy: {accuracy:.4f}\")\n",
-    "\n",
-    "    return history, accuracy, training_time"
    ]
   },
   {
@@ -127,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +564,7 @@
     "        loss=CategoricalCrossEntropy(),\n",
     "    )\n",
     "\n",
-    "    history, accuracy, _ = train_and_evaluate(\n",
+    "    history, accuracy, _, _ = train_and_evaluate(\n",
     "        model,\n",
     "        X_train,\n",
     "        X_test,\n",
@@ -660,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1147,7 +1100,7 @@
     "        loss=CategoricalCrossEntropy(),\n",
     "    )\n",
     "\n",
-    "    history, accuracy, _ = train_and_evaluate(\n",
+    "    history, accuracy, _, _ = train_and_evaluate(\n",
     "        model,\n",
     "        X_train,\n",
     "        X_test,\n",
