fix: change to all dataset for rms norms.

--- a/src/tests/test_activation.ipynb
+++ b/src/tests/test_activation.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1172,7 +1172,7 @@
     "plt.title('Test Accuracy Comparison of Different Activation Functions')\n",
     "plt.xlabel('Activation Function')\n",
     "plt.ylabel('Accuracy')\n",
-    "plt.ylim([0.8, 1.0])  # Adjust y-axis for better visibility\n",
+    "plt.ylim([0.8, 1.0])\n",
     "plt.xticks(rotation=45)\n",
     "for i, v in enumerate(activation_accuracies):\n",
     "    plt.text(i, v + 0.01, f\"{v:.4f}\", ha='center')\n",
