--- a/src/tests/test_depth_width.ipynb
+++ b/src/tests/test_depth_width.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
     "plt.title(\"Test Accuracy vs. Width (1 Hidden Layer)\")\n",
     "plt.xlabel(\"Width (neurons)\")\n",
     "plt.ylabel(\"Accuracy\")\n",
-    "plt.ylim([0.9 * min(width_accuracies), 1.0])  # Adjust y-axis for better visibility\n",
+    "plt.ylim([0.9 * min(width_accuracies), 1.0])\n",
     "for i, v in enumerate(width_accuracies):\n",
     "    plt.text(i, v + 0.01, f\"{v:.4f}\", ha=\"center\")\n",
     "plt.savefig(\"../../out/width_comparison_accuracy.png\")"
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1156,7 +1156,7 @@
     "plt.title(\"Test Accuracy vs. Depth (Width=64)\")\n",
     "plt.xlabel(\"Depth (hidden layers)\")\n",
     "plt.ylabel(\"Accuracy\")\n",
-    "plt.ylim([0.9 * min(depth_accuracies), 1.0])  # Adjust y-axis for better visibility\n",
+    "plt.ylim([0.9 * min(depth_accuracies), 1.0])\n",
     "for i, v in enumerate(depth_accuracies):\n",
     "    plt.text(i, v + 0.01, f\"{v:.4f}\", ha=\"center\")\n",
     "plt.savefig(\"../../out/depth_comparison_accuracy.png\")"
