--- a/src/tests/test_activation.ipynb
+++ b/src/tests/test_activation.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -71,11 +71,11 @@
     "X_train, X_test, y_train, y_test, y_train_onehot, y_test_onehot = load_mnist_data()\n",
     "\n",
     "\n",
-    "input_size = X_train.shape[1]  # 784 for MNIST\n",
-    "output_size = y_train_onehot.shape[1]  # 10 for MNIST\n",
+    "input_size = X_train.shape[1]\n",
+    "output_size = y_train_onehot.shape[1]\n",
     "hidden_size = 64  # Fixed hidden layer size for all experiments\n",
     "\n",
-    "# Experiment configurations\n",
+    "# Experiment configs\n",
     "epochs = 10\n",
     "batch_size = 32\n",
     "learning_rate = 0.01"
@@ -1120,7 +1120,7 @@
     }
    ],
    "source": [
-    "# Testing different activation functions\n",
+    "# Test different activation functions\n",
     "activations = [\n",
     "    (\"Linear\", Linear()),\n",
     "    (\"ReLU\", ReLU()),\n",
@@ -1179,7 +1179,7 @@
     "plt.tight_layout()\n",
     "plt.savefig('../../out/activation_comparison_accuracy.png')\n",
     "\n",
-    "# Plot weight and gradient distributions for each model\n",
+    "# Plot weight and gradient distributions\n",
     "for i, (name, _) in enumerate(activations):\n",
     "    model = trained_models[i]\n",
     "    \n",
@@ -1216,7 +1216,7 @@
     "    plt.savefig(f'../../out/activation_{name}_gradient_dist.png')\n",
     "\n",
     "\n",
-    "# Find best and worst performing activation functions\n",
+    "# Best and worst performing activation functions\n",
     "best_idx = np.argmax(activation_accuracies)\n",
     "worst_idx = np.argmin(activation_accuracies)\n",
     "\n",
