--- a/src/tests/test_depth_width.ipynb
+++ b/src/tests/test_depth_width.ipynb
@@ -564,7 +564,7 @@
     }
    ],
    "source": [
-    "# Testing 3 different widths with fixed depth\n",
+    "# Test 3 different widths with fixed depth\n",
     "widths = [32, 64, 128]\n",
     "width_histories = []\n",
     "width_accuracies = []\n",
@@ -1104,7 +1104,7 @@
     }
    ],
    "source": [
-    "# Testing 3 different depths with fixed width\n",
+    "# Test 3 different depths with fixed width\n",
     "depths = [1, 2, 3]  # Number of hidden layers\n",
     "depth_histories = []\n",
     "depth_accuracies = []\n",
