--- a/src/tests/test_init_weight.ipynb
+++ b/src/tests/test_init_weight.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1001,7 @@
     "batch_size = 32\n",
     "learning_rate = 0.01\n",
     "\n",
-    "# Testing different weight initialization methods\n",
+    "# Test different weight initialization methods\n",
     "initializers = [\n",
     "    (\"Zero\", ZeroInitializer()),\n",
     "    (\"Uniform\", UniformInitializer(low=-0.1, high=0.1, seed=42)),\n",
@@ -1030,7 +1030,7 @@
     "    init_accuracies.append(accuracy)\n",
     "    trained_models.append(trained_model)\n",
     "\n",
-    "# Plot loss curves for all initialization methods\n",
+    "# Plot loss curves\n",
     "plt.figure(figsize=(12, 6))\n",
     "for i, (name, _) in enumerate(initializers):\n",
     "    plt.plot(init_histories[i]['loss'], label=f'{name}')\n",
@@ -1055,7 +1055,7 @@
     "plt.tight_layout()\n",
     "plt.savefig('../../out/init_comparison_accuracy.png')\n",
     "\n",
-    "# Plot weight and gradient distributions for each model\n",
+    "# Plot weight and gradient distributions\n",
     "for i, (name, _) in enumerate(initializers):\n",
     "    model = trained_models[i]\n",
     "    \n",
