--- a/src/tests/test_regularization.ipynb
+++ b/src/tests/test_regularization.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -614,12 +614,12 @@
     "output_size = y_train_onehot.shape[1]  # 10 for MNIST\n",
     "hidden_size = 64  # Fixed hidden layer size for all experiments\n",
     "\n",
-    "# Experiment configurations\n",
+    "# Experiment configs\n",
     "epochs = 10\n",
     "batch_size = 32\n",
     "learning_rate = 0.01\n",
     "\n",
-    "# Test different regularization methods\n",
+    "# Test different regularization\n",
     "regularizers = [\n",
     "    (\"None\", NoRegularizer()),\n",
     "    (\"L1\", L1Regularizer(lambda_param=0.0001)),\n",
@@ -646,7 +646,7 @@
     "    reg_accuracies.append(accuracy)\n",
     "    trained_models.append(trained_model)\n",
     "\n",
-    "# Plot loss curves for all regularization methods\n",
+    "# Plot loss curves for all regularization\n",
     "plt.figure(figsize=(12, 6))\n",
     "for i, (name, _) in enumerate(regularizers):\n",
     "    plt.plot(reg_histories[i]['loss'], label=f'{name}')\n",
@@ -669,7 +669,7 @@
     "    plt.text(i, v + 0.01, f\"{v:.4f}\", ha='center')\n",
     "plt.savefig('../../out/regularization_comparison_accuracy.png')\n",
     "\n",
-    "# Plot weight and gradient distributions for each model\n",
+    "# Plot weight and gradient distributions\n",
     "for i, (name, _) in enumerate(regularizers):\n",
     "    model = trained_models[i]\n",
     "    \n",
