--- a/src/tests/test_rmsnorm.ipynb
+++ b/src/tests/test_rmsnorm.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
     "    trained_models.append(trained_model)\n",
     "    training_times.append(training_time)\n",
     "\n",
-    "# Plot loss curves for both models\n",
+    "# Plot loss curves\n",
     "plt.figure(figsize=(12, 6))\n",
     "for i, (name, _) in enumerate(normalizations):\n",
     "    plt.plot(norm_histories[i]['loss'], label=f'{name}')\n",
@@ -554,7 +554,7 @@
     "    plt.text(i, v + 1, f\"{v:.2f}s\", ha='center')\n",
     "plt.savefig('../../out/rmsnorm_comparison_time.png')\n",
     "\n",
-    "# Plot weight and gradient distributions for each model\n",
+    "# Plot weight and gradient distribution\n",
     "for i, (name, _) in enumerate(normalizations):\n",
     "    model = trained_models[i]\n",
     "    \n",
