--- a/src/tests/test_learning_rate.ipynb
+++ b/src/tests/test_learning_rate.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -589,11 +589,11 @@
     "output_size = y_train_onehot.shape[1]  # 10 for MNIST\n",
     "hidden_size = 64  # Fixed hidden layer size for all experiments\n",
     "\n",
-    "# Experiment configurations\n",
+    "# Experiment configs\n",
     "epochs = 10\n",
     "batch_size = 32\n",
     "\n",
-    "# Testing different learning rates\n",
+    "# Test different learning rates\n",
     "learning_rates = [0.001, 0.01, 0.1]\n",
     "lr_histories = []\n",
     "lr_accuracies = []\n",
