--- a/src/tests/test_sklearn_comp.ipynb
+++ b/src/tests/test_sklearn_comp.ipynb
@@ -54,15 +54,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def train_and_evaluate_ffnn(model, X_train, X_test, y_train_onehot, y_test, y_test_onehot, \n",
     "                          epochs=10, batch_size=32, learning_rate=0.01):\n",
-    "    \"\"\"\n",
-    "    Train and evaluate our FFNN model\n",
-    "    \"\"\"\n",
     "    print(\"\\nTraining custom FFNN model...\")\n",
     "    start_time = time.time()\n",
     "    \n",
@@ -79,7 +76,7 @@
     "    training_time = time.time() - start_time\n",
     "    print(f\"FFNN training took {training_time:.2f} seconds\")\n",
     "    \n",
-    "    # Make predictions and calculate accuracy\n",
+    "    # Predict & calc accuracy\n",
     "    y_pred = model.predict(X_test)\n",
     "    y_pred_classes = np.argmax(y_pred, axis=1)\n",
     "    accuracy = accuracy_score(y_test, y_pred_classes)\n",
@@ -173,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -418,8 +415,8 @@
     "X_train, X_test, y_train, y_test, y_train_onehot, y_test_onehot = load_mnist_data()\n",
     "\n",
     "\n",
-    "input_size = X_train.shape[1]  # 784 for MNIST\n",
-    "output_size = y_train_onehot.shape[1]  # 10 for MNIST\n",
+    "input_size = X_train.shape[1]\n",
+    "output_size = y_train_onehot.shape[1]\n",
     "\n",
     "# Define hidden layer structure (two hidden layers)\n",
     "hidden_sizes = [128, 64]\n",
@@ -429,13 +426,13 @@
     "batch_size = 32\n",
     "learning_rate = 0.01\n",
     "\n",
-    "# Train and evaluate our FFNN model\n",
     "ffnn_model = FFNN(\n",
     "    layer_sizes=[input_size] + hidden_sizes + [output_size],\n",
     "    activations=[ReLU(), ReLU(), Softmax()],\n",
     "    loss=CategoricalCrossEntropy()\n",
     ")\n",
     "\n",
+    "# Train and evaluate scratch model\n",
     "ffnn_history, ffnn_accuracy, ffnn_time, ffnn_pred, ffnn_cm = train_and_evaluate_ffnn(\n",
     "    ffnn_model, X_train, X_test, y_train_onehot, y_test, y_test_onehot,\n",
     "    epochs=epochs, batch_size=batch_size, learning_rate=learning_rate\n",
@@ -463,7 +460,7 @@
     "plt.savefig('../../out/sklearn_comparison_loss.png')\n",
     "\n",
     "# Plot confusion matrices\n",
-    "digits = list(range(10))  # Class labels for MNIST\n",
+    "digits = list(range(10))\n",
     "plot_confusion_matrix(ffnn_cm, digits, \"FFNN Confusion Matrix\", '../../out/ffnn_confusion_matrix.png')\n",
     "plot_confusion_matrix(sklearn_cm, digits, \"sklearn Confusion Matrix\", '../../out/sklearn_confusion_matrix.png')\n",
     "\n",
