test reg n rms to run val loss

--- a/src/tests/test_regularization.ipynb
+++ b/src/tests/test_regularization.ipynb
@@ -650,7 +650,7 @@
     "plt.figure(figsize=(12, 6))\n",
     "for i, (name, _) in enumerate(regularizers):\n",
     "    plt.plot(reg_histories[i]['loss'], label=f'{name}')\n",
-    "\n",
+    "    plt.plot(reg_histories[i]['val_loss'], label=f'validation {name}')  \n",
     "plt.title('Training Loss Comparison of Different Regularization Methods')\n",
     "plt.xlabel('Epoch')\n",
     "plt.ylabel('Loss')\n",
