--- a/src/tests/test_rmsnorm.ipynb
+++ b/src/tests/test_rmsnorm.ipynb
@@ -525,7 +525,7 @@
     "plt.figure(figsize=(12, 6))\n",
     "for i, (name, _) in enumerate(normalizations):\n",
     "    plt.plot(norm_histories[i]['loss'], label=f'{name}')\n",
-    "\n",
+    "    plt.plot(norm_histories[i]['val_loss'], label=f'validation {name}')  \n",
     "plt.title('Training Loss Comparison With and Without RMSNorm')\n",
     "plt.xlabel('Epoch')\n",
     "plt.ylabel('Loss')\n",
