--- a/src/tests/test_rmsnorm.ipynb
+++ b/src/tests/test_rmsnorm.ipynb
@@ -16,9 +16,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unexpected exception formatting exception. Falling back to standard exception\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/home/fairuz/Documents/Github/sem6/FFNN/venv/lib/python3.12/site-packages/IPython/core/interactiveshell.py\", line 3549, in run_code\n",
+      "  File \"/tmp/ipykernel_6389/2206853993.py\", line 4, in <module>\n",
+      "    import matplotlib.pyplot as plt\n",
+      "  File \"/home/fairuz/Documents/Github/sem6/FFNN/venv/lib/python3.12/site-packages/matplotlib/__init__.py\", line 1296, in <module>\n",
+      "    rcParams['backend'] = os.environ.get('MPLBACKEND')\n",
+      "    ~~~~~~~~^^^^^^^^^^^\n",
+      "  File \"/home/fairuz/Documents/Github/sem6/FFNN/venv/lib/python3.12/site-packages/matplotlib/__init__.py\", line 771, in __setitem__\n",
+      "    raise ValueError(f\"Key {key}: {ve}\") from None\n",
+      "ValueError: Key backend: 'module://matplotlib_inline.backend_inline' is not a valid value for backend; supported values are ['gtk3agg', 'gtk3cairo', 'gtk4agg', 'gtk4cairo', 'macosx', 'nbagg', 'notebook', 'qtagg', 'qtcairo', 'qt5agg', 'qt5cairo', 'tkagg', 'tkcairo', 'webagg', 'wx', 'wxagg', 'wxcairo', 'agg', 'cairo', 'pdf', 'pgf', 'ps', 'svg', 'template']\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/fairuz/Documents/Github/sem6/FFNN/venv/lib/python3.12/site-packages/pygments/styles/__init__.py\", line 45, in get_style_by_name\n",
+      "ModuleNotFoundError: No module named 'pygments.styles.default'\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/fairuz/Documents/Github/sem6/FFNN/venv/lib/python3.12/site-packages/IPython/core/interactiveshell.py\", line 2173, in showtraceback\n",
+      "  File \"/home/fairuz/Documents/Github/sem6/FFNN/venv/lib/python3.12/site-packages/IPython/core/ultratb.py\", line 1182, in structured_traceback\n",
+      "  File \"/home/fairuz/Documents/Github/sem6/FFNN/venv/lib/python3.12/site-packages/IPython/core/ultratb.py\", line 1053, in structured_traceback\n",
+      "  File \"/home/fairuz/Documents/Github/sem6/FFNN/venv/lib/python3.12/site-packages/IPython/core/ultratb.py\", line 861, in structured_traceback\n",
+      "  File \"/home/fairuz/Documents/Github/sem6/FFNN/venv/lib/python3.12/site-packages/IPython/core/ultratb.py\", line 745, in format_exception_as_a_whole\n",
+      "  File \"/home/fairuz/Documents/Github/sem6/FFNN/venv/lib/python3.12/site-packages/IPython/core/ultratb.py\", line 684, in prepare_header\n",
+      "  File \"/home/fairuz/Documents/Github/sem6/FFNN/venv/lib/python3.12/site-packages/IPython/utils/PyColorize.py\", line 64, in format\n",
+      "  File \"/home/fairuz/Documents/Github/sem6/FFNN/venv/lib/python3.12/site-packages/IPython/utils/PyColorize.py\", line 54, in as_pygments_style\n",
+      "  File \"/home/fairuz/Documents/Github/sem6/FFNN/venv/lib/python3.12/site-packages/pygments/styles/__init__.py\", line 47, in get_style_by_name\n",
+      "pygments.util.ClassNotFound: Could not find style module 'pygments.styles.default', though it should be builtin.\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
@@ -45,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +102,7 @@
     "        activations=[ReLU(), Softmax()],\n",
     "        loss=CategoricalCrossEntropy()\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    # Replace the default normalization with the specified one\n",
     "    model.layers = []\n",
     "    for i in range(len(model.layer_sizes) - 1):\n",
@@ -68,13 +112,13 @@
     "            activation=model.activations[i],\n",
     "            normalization=normalization\n",
     "        ))\n",
-    "    \n",
+    "\n",
     "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -498,15 +542,15 @@
     "for name, normalization in normalizations:\n",
     "    model_name = f\"FFNN {name}\"\n",
     "    print(f\"\\nTraining model {name}\")\n",
-    "    \n",
+    "\n",
     "    model = create_model_with_normalization(input_size, hidden_size, output_size, normalization)\n",
-    "    \n",
+    "\n",
     "    history, accuracy, training_time, trained_model = train_and_evaluate(\n",
     "        model, X_train, X_test, y_train_onehot, y_test, y_test_onehot,\n",
     "        epochs=epochs, batch_size=batch_size, learning_rate=learning_rate,\n",
     "        model_name=model_name\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    norm_histories.append(history)\n",
     "    norm_accuracies.append(accuracy)\n",
     "    trained_models.append(trained_model)\n",
@@ -516,7 +560,7 @@
     "plt.figure(figsize=(12, 6))\n",
     "for i, (name, _) in enumerate(normalizations):\n",
     "    plt.plot(norm_histories[i]['loss'], label=f'{name}')\n",
-    "    plt.plot(norm_histories[i]['val_loss'], label=f'validation {name}')  \n",
+    "    plt.plot(norm_histories[i]['val_loss'], label=f'validation {name}')\n",
     "plt.title('Training Loss Comparison With and Without RMSNorm')\n",
     "plt.xlabel('Epoch')\n",
     "plt.ylabel('Loss')\n",
@@ -548,11 +592,11 @@
     "# Plot weight and gradient distribution\n",
     "for i, (name, _) in enumerate(normalizations):\n",
     "    model = trained_models[i]\n",
-    "    \n",
+    "\n",
     "    # Plot weight distributions\n",
     "    plt.figure(figsize=(12, 5))\n",
     "    plt.suptitle(f'Weight Distribution {name}', fontsize=16)\n",
-    "    \n",
+    "\n",
     "    for j, layer in enumerate(model.layers):\n",
     "        plt.subplot(1, len(model.layers), j+1)\n",
     "        weights = layer.weights.flatten()\n",
@@ -560,15 +604,15 @@
     "        plt.title(f'Layer {j+1}')\n",
     "        plt.xlabel('Weight Value')\n",
     "        plt.ylabel('Frequency')\n",
-    "        \n",
+    "\n",
     "    plt.tight_layout()\n",
     "    plt.subplots_adjust(top=0.85)\n",
     "    plt.savefig(f'../../out/rmsnorm_{i}_weight_dist.png')\n",
-    "    \n",
+    "\n",
     "    # Plot gradient distributions\n",
     "    plt.figure(figsize=(12, 5))\n",
     "    plt.suptitle(f'Gradient Distribution {name}', fontsize=16)\n",
-    "    \n",
+    "\n",
     "    for j, layer in enumerate(model.layers):\n",
     "        plt.subplot(1, len(model.layers), j+1)\n",
     "        gradients = layer.weights_grad.flatten()\n",
@@ -576,7 +620,7 @@
     "        plt.title(f'Layer {j+1}')\n",
     "        plt.xlabel('Gradient Value')\n",
     "        plt.ylabel('Frequency')\n",
-    "        \n",
+    "\n",
     "    plt.tight_layout()\n",
     "    plt.subplots_adjust(top=0.85)\n",
     "    plt.savefig(f'../../out/rmsnorm_{i}_gradient_dist.png')\n",
@@ -584,29 +628,29 @@
     "# Plot activation distributions\n",
     "for i, (name, _) in enumerate(normalizations):\n",
     "    model = trained_models[i]\n",
-    "    \n",
+    "\n",
     "    # Get a batch of data to test activations\n",
     "    batch_indices = np.random.choice(len(X_test), min(100, len(X_test)), replace=False)\n",
     "    batch_X = X_test[batch_indices]\n",
-    "    \n",
+    "\n",
     "    # Forward pass to collect activations\n",
     "    activations = []\n",
     "    output = batch_X\n",
     "    for layer in model.layers:\n",
     "        output = layer.forward(output)\n",
     "        activations.append(layer.output_before_activation.flatten())\n",
-    "    \n",
+    "\n",
     "    # Plot activation distributions\n",
     "    plt.figure(figsize=(12, 5))\n",
     "    plt.suptitle(f'Activation Distribution {name}', fontsize=16)\n",
-    "    \n",
+    "\n",
     "    for j, activation in enumerate(activations):\n",
     "        plt.subplot(1, len(activations), j+1)\n",
     "        plt.hist(activation, bins=50, alpha=0.7)\n",
     "        plt.title(f'Layer {j+1}')\n",
     "        plt.xlabel('Activation Value')\n",
     "        plt.ylabel('Frequency')\n",
-    "        \n",
+    "\n",
     "    plt.tight_layout()\n",
     "    plt.subplots_adjust(top=0.85)\n",
     "    plt.savefig(f'../../out/rmsnorm_{i}_activation_dist.png')"
@@ -614,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +698,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
